--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "node-avatar-generator",
-  "version": "1.0.9",
+  "name": "initials-avatar-generator",
+  "version": "1.0.0",
   "description": "a random avatar generator base on node and node-imagemagick",
   "main": "index.js",
   "scripts": {
@@ -8,18 +8,15 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/vinthony/node-avatar-generator.git"
+    "url": "https://github.com/kubal5003/node-avatar-generator.git"
   },
   "keywords": [
     "avatar",
-    "image"
+    "image",
+    "initials"
   ],
-  "author": "vinthony",
+  "author": "kubal5003",
   "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/vinthony/node-avatar-generator/issues"
-  },
-  "homepage": "https://github.com/vinthony/node-avatar-generator",
   "dependencies": {
     "gm": "^1.17.0"
   },
